--- a/style.css
+++ b/style.css
@@ -23,49 +23,102 @@ main {
 
 .board {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 0.3fr 1fr;
   position: relative;
 
-  border-radius: 1rem;
   overflow: hidden;
   height: 100%;
-}
-.player {
-  padding: 20px;
   width: 100%;
 }
+.player {
+  padding: 5px;
+  margin: 20px;
+  border-radius: 1rem;
+}
 .player0Header {
-  margin-right: 70px;
+  background: transparent;
 }
 .player1Header {
-  margin-left: 70px;
+  background: transparent;
 }
 .btnContainer {
-  position: absolute;
-  top: 0%;
-  right: 47%;
   display: flex;
   text-align: center;
   background: transparent;
   flex-direction: column;
   justify-content: space-between;
   margin-top: 60px;
-  padding: 10px;
-  height: 80%;
+  width: 100%;
+  height: 60%;
 }
 
 .btn {
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-image: radial-gradient(
-    circle farthest-corner at 40% 70%,
-    rgba(14, 174, 87, 1) 0%,
-    rgba(12, 116, 117, 1) 90%
-  );
-}
-.wrapper {
+  text-shadow: rgba(145, 255, 0, 0.1) 0px 0px 2px;
+  cursor: pointer;
   background-color: white;
   border-radius: 4px;
-  padding: 4px;
+  padding: 10px 24px;
+  cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.currentScore {
+  background-image: radial-gradient(
+    circle farthest-corner at 10% 20%,
+    rgba(138, 43, 226, 1) 0%,
+    rgb(71, 19, 119) 90%
+  );
+  margin: 40px auto;
+  border-radius: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  padding: 30px;
+  width: 75%;
+}
+.currentScore > span {
+  background: transparent;
+}
+.totalScore {
+  background-image: radial-gradient(
+    circle farthest-corner at 10% 20%,
+    rgba(138, 43, 226, 1) 0%,
+    rgb(71, 19, 119) 90%
+  );
+  border-radius: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  margin: 40px auto;
+  padding: 0 30px;
+  width: 75%;
+  height: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.totalScore > span {
+  background: transparent;
+}
+.activePlayer {
+  background-color: rgba(0, 0, 0, 0.404);
+  color: rgba(14, 174, 87, 1);
+  text-shadow: rgba(145, 255, 0, 0.5) 0px 0px 2px;
+}
+.triangle {
+  width: 0px;
+  height: 0px;
+  border-style: solid;
+  border-width: 0 100px 150px 100px;
+  background-color: #25bd71;
+  border-color: transparent transparent #32ff98 transparent;
+  transform: rotate(0deg);
+  position: relative;
+  box-shadow: 0px 5px 10px -5px rgba(0, 0, 0, 0.1);
+}
+.rollValue {
+  top: 65px;
+  left: -16px;
+  position: relative;
+  width: 93px;
+  height: 93px;
+  margin: 0px;
+  font-size: 55px;
+  background: transparent;
 }
