--- a/style.css
+++ b/style.css
@@ -101,6 +101,11 @@ main {
   color: rgba(14, 174, 87, 1);
   text-shadow: rgba(145, 255, 0, 0.5) 0px 0px 2px;
 }
+.winner {
+  background-color: rgba(0, 0, 0, 1);
+  color: rgb(255, 217, 0);
+  text-shadow: rgba(255, 251, 0, 0.801) 0px 0px 4px;
+}
 .triangle {
   width: 0px;
   height: 0px;
